marcoTests/testData/error/object1.marco
--before
{

--after
1: '}' expected

{ğŸ’¥